--- a/.github/workflows/auto_review.yml
+++ b/.github/workflows/auto_review.yml
@@ -20,10 +20,13 @@ jobs:
         node-version: '16'
 
     - name: Install dependencies
-      run: npm install
+      run: |
+        cd .github/workflows
+        run: npm install
 
     - name: Run Auto Review Script
       run: |
+        cd .github/workflows      
         # Run your custom review logic script
         node review.js ${{ github.event.pull_request.html_url }}
       env:
