--- a/.github/workflows/auto_review.yml
+++ b/.github/workflows/auto_review.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install dependencies
       run: |
         cd .github/workflows
-        run: npm install
+        npm install
 
     - name: Run Auto Review Script
       run: |
