--- a/.github/workflows/auto_review.yml
+++ b/.github/workflows/auto_review.yml
@@ -30,5 +30,5 @@ jobs:
         # Run your custom review logic script
         node review.js ${{ github.event.pull_request.html_url }}
       env:
-        GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+        #GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
