--- a/.github/workflows/auto_review.yml
+++ b/.github/workflows/auto_review.yml
@@ -10,6 +10,10 @@ jobs:
   review-pr:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: read
+      pull-requests: write
+
     steps:
     - name: Checkout Code
       uses: actions/checkout@v3
