--- a/.github/workflows/auto_review.yml
+++ b/.github/workflows/auto_review.yml
@@ -3,8 +3,10 @@
 name: PR Auto Review
 
 on:
-  pull_request:
-    types: [opened, synchronize] # Trigger on PR open or update
+  #pull_request:
+    #types: [opened, synchronize] # Trigger on PR open or update
+  workflow_dispatch: # Manual trigger from Action tab
+
 
 jobs:
   review-pr:
